# stencil3

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  changelog.md  hk.pkl  mise.toml
.config/: hk.pkl  mise.docs.toml  mise.lint.toml  mise.publish.toml  mise.toml  miserc.toml
.github/: actions_config.toml  renovate.json
.github/actions/mise/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: build.yml  cargo-msrv.yaml  cargo-msrv.yml  check.yml  codeql.yml  format-lint.yml  pages.yml  publish.yml  test.yml  trigger-pkg-manager-updates.yml
docs/: 404.html  Component-Editing.html  Create-Mode.html  Directories.html  Env-Variables.html  History.html  Home.html  Input.html  Layout.html  Loading-&-Importing.html  Map-Settings.html  Misc-Settings.html  Nodes-Mode.html  Project-Management.html  Project-TOML.html  Quickstart.html  Saving-&-Exporting.html  Select-Mode.html  Settings.html  Shortcut-Settings.html  Tilemap.html  UI-Settings.html  book.toml  index.html  print.html  searcher-09f2665d.js  searchindex-54b81178.js  searchindex-6f9487ed.js  searchindex-82b9fa2b.js  searchindex-a6b9020b.js  searchindex-ae80bcff.js  searchindex-e665ff61.js  toc-3762fe35.js  toc-3ca70670.js  toc-6cbda905.js  toc-d64e41d2.js  toc.html
docs/v2/: Stencil2-Advanced-Topics.html  Stencil2-Basics.html  Stencil2-Home.html
pla/: Cargo.toml
pla/src/: component.rs  lib.rs  node.rs  node_type.rs  pla2.rs
pla3/: Cargo.toml
pla3/src/: component.rs  error.rs  lib.rs  node.rs  node_type.rs  node_vec.rs  pla2.rs
src/: coord.rs  file.rs  load_save.rs  logging.rs  main.rs
src/component_actions/: clipboard.rs  create.rs  delete.rs  event.rs  move.rs  paint.rs  select.rs
src/component_actions/paint/: area.rs  line.rs  mod.rs  point.rs  utils.rs
src/info_windows/: changelog.rs  info.rs  licenses.rs  manual.rs  memorial.rs  mod.rs  quit.rs
src/map/: basemap.rs  context_menu.rs  mod.rs  settings.rs  state.rs  tile_coord.rs  toolbar.rs
src/project/: component_editor.rs  component_list.rs  event.rs  history.rs  history_viewer.rs  load_save.rs  mod.rs  namespace_event.rs  pla3.rs  project_editor.rs  skin.rs
src/settings/: misc_settings.rs  mod.rs  window_settings.rs
src/shortcut/: mod.rs  settings.rs
src/ui/: dock.rs  menu_bar.rs  mod.rs  notif.rs  popup.rs  settings.rs  status.rs
src/utils/: file.rs  load_save.rs  mod.rs  warnings.rs  with_warnings.rs
