[package]
name = "pla3"
version = "0.1.0"
edition = "2024"
description = "PLA3 format developed by MRT Mapping Services"
authors = ["MRT Mapping Services", "7d <61975820+iiiii7d@users.noreply.github.com>"]
license = "LGPL-3.0-only"
homepage = "https://mrt-map.github.io/stencil3"
repository = "https://github.com/mrt-map/stencil3"
documentation = "https://github.com/MRT-Map/stencil3/wiki"
readme = "../README.md"
keywords = ["pla3", "pla3", "mrt", "mrt-map", "mrt-mapping-services"]
categories = ["games", "science::geo", "parser-implementations"]

[dependencies]
thiserror = "2.0"
itertools = "0.14.0"
ordered-float = "5.3"
toml = "1.1"
serde = { version = "1.0", features = ["derive"], optional = true }
tracing = { version = "0.1.44", optional = true }

duplicate = "2.0"
mint = { version = "0.5.9", optional = true }
geo = { version = "0.33.1", default-features = false, optional = true }
egui = { version = "0.34.2", default-features = false, optional = true }
glam = { version = "0.33.0", default-features = false, optional = true, features = ["std", "all-types"] }

[dev-dependencies]
proptest = "=1.11.0"

[lints]
workspace = true
