[package]
name = "pla3"
version = "0.1.0"
edition = "2024"
description = "PLA3 format developed by MRT Mapping Services"
authors = ["MRT Mapping Services", "7d <61975820+iiiii7d@users.noreply.github.com>"]
license = "LGPL-3.0-only"
homepage = "https://mrt-map.github.io/stencil3"
repository = "https://github.com/mrt-map/stencil3"
documentation = "https://github.com/MRT-Map/stencil3/wiki"
readme = "../README.md"
keywords = ["pla3", "pla3", "mrt", "mrt-map", "mrt-mapping-services"]
categories = ["games", "science::geo", "parser-implementations"]

[dependencies]
thiserror = { version = "2.0", default-features = false }
itertools = { version = ">=0.7.0, <0.15.0", default-features = false }
ordered-float = { version = "5.0", default-features = false }
toml = { version = "1.0", default-features = false, features = ["serde", "display", "parse"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
tracing = { version = "0.1.13", default-features = false, features = ["attributes"], optional = true }

duplicate = { version = "2.0", optional = true }
mint = { version = ">=0.3.0, <0.6.0", optional = true }
geo = { version = ">=0.22.0, <0.34.0", default-features = false, optional = true }
egui = { version = ">=0.28.0, <0.35.0", default-features = false, optional = true }
glam = { version = ">=0.33.0, <0.34.0", default-features = false, optional = true, features = ["all-types"] }

[dev-dependencies]
proptest = "=1.11.0"

[features]
default = ["std"]
std = [
    "thiserror/std",
    "itertools/use_std",
    "ordered-float/std",
    "toml/std",
    "serde?/std",
    "tracing?/std",
    "glam?/std",
]
libm = [
    "ordered-float/libm",
    "glam?/libm",
]

mint = ["dep:mint", "duplicate"]
geo = ["dep:geo", "duplicate"]
egui = ["dep:egui", "duplicate"]
glam = ["dep:glam", "duplicate"]

[lints.rust]
future-incompatible = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
cargo = "warn"
nursery = "warn"

missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
cognitive_complexity = { level = "allow", priority = 1 }

allow_attributes = "warn"
#arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
missing_asserts_for_indexing = "warn"
#missing_inline_in_public_items = "warn"
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"

